# tinyCoroLab

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.MD  TODO.MD  TODO.md
.cache/clangd/index/: ansicolor_sink-inl.h.E99F6BE46000D796.idx  ansicolor_sink.h.9CD56812928A5FAE.idx  arraysize.h.0D0E9280F3316587.idx  async.cpp.EA3DEBBBD6162DF7.idx  async.h.6FC68DD411B939B8.idx  async_logger-inl.h.EF15B92A18D41AF5.idx  async_logger.h.9F40B935AC0CDC60.idx  atomic_que.hpp.8F620316AFEB8F86.idx  atomic_queue.h.09077FCF4385C51E.idx  attribute.hpp.D86EE78B4C68BCC4.idx  awaitable.hpp.E160CEB6649B8092.idx  backtracer-inl.h.2F615761A7CFE84F.idx  backtracer.h.7110BDC35EAD1FAD.idx  base.h.7B59CED222F9DBAF.idx  base_awaiter.hpp.421B8C69C282A5F1.idx  base_sink-inl.h.945225C113ED2BF5.idx  base_sink.h.F0D08BAFE70CD4F8.idx  basic_file_sink-inl.h.944D05AB52AC1D20.idx  basic_file_sink.h.59AF026F5E3B1DD1.idx  bench_helper.hpp.4D2FCB3BE58E768C.idx  benchmark.cc.B8B3464E141199C1.idx  benchmark.h.8A50AB2922F705E9.idx  benchmark_api_internal.cc.251A8F524265343D.idx  benchmark_api_internal.h.181A35CD381AE003.idx  benchmark_main.cc.A4072589B1D5C4C4.idx  benchmark_name.cc.15569E54C3BDF19F.idx  benchmark_register.cc.5A9A1EB719C734D6.idx  benchmark_register.h.0D5298D3AC7A6876.idx  benchmark_runner.cc.FBAA337463CC26CA.idx  benchmark_runner.h.FD3F7E0189A2F319.idx  buffer_channel.cpp.8CEDD4CFC4AD0C0B.idx  bundled_fmtlib_format.cpp.2072B4C434709EE7.idx  cfg.cpp.87E3FE8765D2F8D0.idx  channel.cpp.4DE5D5B738060AB5.idx  channel.cpp.9D300B3F68E6BB78.idx  channel.hpp.1178254DD56C2D95.idx  check.cc.35557E106BFB52E8.idx  check.h.7218892ABCD7AE0F.idx  circular_q.h.AC9EFA42DE22F801.idx  color_sinks.cpp.E127AD05F44BC4D6.idx  (+212 more)
benchmark/: CMakeLists.txt  README.MD  bench.sh  bench_results.txt
benchmark/128b/: tinycoro_bench.cpp
benchmark/1k/: tinycoro_bench.cpp
benchmark/base_model/: epoll_server_bench.cpp  uring_server_bench.cpp
benchmark/baseline/: epoll_server.cpp
benchmark/tinycoro_model/: tinycoro_128_bench.cpp  tinycoro_16k_bench.cpp  tinycoro_1k_bench.cpp
benchtests/: CMakeLists.txt  bench_helper.hpp  example_bench.cpp  lab4a_bench.cpp  lab4b_bench.cpp  lab4c_bench.cpp  lab4d_bench.cpp  lab5b_bench.cpp  lab5c_bench.cpp
config/: config.h.in  config.hpp
examples/: CMakeLists.txt  buffer_channel.cpp  channel.cpp  coro_debug.cpp  cv_debug.cpp  cv_notify_all.cpp  cv_notify_all_cond.cpp  cv_notify_one.cpp  event.cpp  event_guard.cpp  event_value.cpp  latch.cpp  latch_guard.cpp  mutex.cpp  mutex_debug.cpp  mutex_guard.cpp  parallel_add.cpp  parallel_calc.cpp  stack_call.cpp  stdin_client.cpp  tcp_echo_client.cpp  tcp_echo_server.cpp  tcp_server.cpp  uring_server.cpp  user_input_client.cpp  wait_group.cpp  when_all.cpp  when_all_value.cpp
include/coro/: atomic_que.hpp  attribute.hpp  context.hpp  coro.hpp  dispatcher.hpp  engine.hpp  event.hpp  latch.hpp  log.hpp  meta_info.hpp  mutex.hpp  mutex_guard.hpp  scheduler.hpp  spinlock.hpp  strategy.hpp.del  task.hpp  thread_info.hpp  uring_proxy.hpp  utils.hpp  worker.hpp
include/coro/comp/: channel.hpp  condition_variable.hpp  event.hpp  latch.hpp  mutex.hpp  mutex_guard.hpp  wait_group.hpp  when_all.hpp
include/coro/concepts/: awaitable.hpp  common.hpp  lock.hpp
include/coro/detail/: container.hpp  types.hpp  void_value.hpp
include/coro/net/: base_awaiter.hpp  io_awaiter.hpp  io_info.hpp  tcp.hpp
include/lock/: condition_variable.cpp  condition_variable.hpp  lock_guard.hpp  mutex.hpp  spin_lock.hpp  timer.hpp
include/log/: log.hpp
include/net/: base_awaiter.hpp  io_awaiter.hpp  io_info.hpp  tcp.hpp
include/uds/: atomic_que.hpp  ring_cursor.hpp
include/uring/: uring.hpp
include/utils/: atom.hpp  defs.hpp  utils.hpp
resource/: tinycoro_arch.excalidraw  tinycoro_core.excalidraw  tinycoro_loop.excalidraw
scripts/: README.MD  analysis_valgrind.py  memcheck.sh  perf_svg.py  perf_svg.sh  print_list.sh
src/: CMakeLists.txt  context.cpp  engine.cpp  event.cpp  mutex.cpp  scheduler.cpp  strategy.cpp.del  utils.cpp
src/comp/: channel.cpp  condition_variable.cpp  event.cpp  latch.cpp  mutex.cpp  wait_group.cpp  wg_group.cpp
src/coro/: CMakeLists.txt  context.cpp  worker.cpp
src/lock/: CMakeLists.txt  condition_variable.cpp  mutex.cpp
src/net/: CMakeLists.txt  io_awaiter.cpp  tcp.cpp
src/uring/: CMakeLists.txt  uring.cpp
src/utils/: CMakeLists.txt  utils.cpp
tests/: CMakeLists.txt  base_add.cpp  lab1_test.cpp  lab2a_test.cpp  lab2b_test.cpp  lab3.cpp  lab3_test.py  lab4a_test.cpp  lab4b_test.cpp  lab4c_test.cpp  lab4d_test.cpp  lab5a_test.cpp  lab5b_test.cpp  lab5c_test.cpp
