add_executable(tinycoro_bench_128b 128b/tinycoro_bench.cpp)
target_link_libraries(tinycoro_bench_128b ${PROJECT_NAME})
if(CMAKE_BUILD_TYPE STREQUAL "Debug")
  target_compile_options(tinycoro_bench_128b PRIVATE "-g")
endif()
if(ENABLE_COMPILE_OPTIMIZE)
  target_compile_options(tinycoro_bench_128b PUBLIC -O3)
endif()

add_executable(tinycoro_bench_1k 1k/tinycoro_bench.cpp)
target_link_libraries(tinycoro_bench_1k ${PROJECT_NAME})
if(CMAKE_BUILD_TYPE STREQUAL "Debug")
  target_compile_options(tinycoro_bench_1k PRIVATE "-g")
endif()
if(ENABLE_COMPILE_OPTIMIZE)
  target_compile_options(tinycoro_bench_1k PUBLIC -O3)
endif()


add_executable(tinycoro_bench_16k 16k/tinycoro_bench.cpp)
target_link_libraries(tinycoro_bench_16k ${PROJECT_NAME})
if(CMAKE_BUILD_TYPE STREQUAL "Debug")
  target_compile_options(tinycoro_bench_16k PRIVATE "-g")
endif()
if(ENABLE_COMPILE_OPTIMIZE)
  target_compile_options(tinycoro_bench_16k PUBLIC -O3)
endif()

add_executable(uring_server baseline/uring_server.cpp)
add_executable(epoll_server baseline/epoll_server.cpp)
target_link_libraries(uring_server uring)